--- a/p2-app/app/views/users/new.html.erb
+++ b/p2-app/app/views/users/new.html.erb
@@ -9,6 +9,14 @@
   <%= f.text_field :first_name %>
   <br>
 
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  <br>
+
+  <%= f.label :birthday %>
+  <%= f.date_field :birthday %>
+  <br>
+
   <%= f.label :password %>
   <%= f.password_field :password %>
   <br>
