add welcome page, add buttons sign up, log in, log out. Add sessions routes

--- a/p2-app/app/views/layouts/application.html.erb
+++ b/p2-app/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 <h1>Mallard Team Yayyy!!!</h1>
+<h3>Please sign up if you are not a member</h3>
+<%= link_to "Sign up", new_user_path %>
+
+<h3>Please log in if you are a member</h3>
+<%= link_to "Log in", login_path %>
 <%= yield %>
 
 </body>
