--- a/p2-app/app/views/users/show.html.erb
+++ b/p2-app/app/views/users/show.html.erb
@@ -5,3 +5,4 @@ Your Username: <%= @user.username %></br>
 Email: 				 <%= @user.email %></br>
 Birthday:      <%= @user.birthday %></br>
 Score:         <%= @user.score %></br>
+<%= link_to "Log out", logout_path %>
