--- a/p2-app/app/views/layouts/application.html.erb
+++ b/p2-app/app/views/layouts/application.html.erb
@@ -8,11 +8,18 @@
 </head>
 <body>
 <h1>Mallard Team Yayyy!!!</h1>
-<h3>Please sign up if you are not a member</h3>
-<%= link_to "Sign up", new_user_path %>
 
-<h3>Please log in if you are a member</h3>
-<%= link_to "Log in", login_path %>
+  <% if user_signed_in? %>
+    <%= current_user.email %>
+    <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Sign in', new_user_session_path %>
+    <%= link_to 'Sign up', new_user_registration_path %>
+  <% end %>
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
 <%= yield %>
 
 </body>
