randomized letters and draggable

--- a/p2-app/app/views/layouts/application.html.erb
+++ b/p2-app/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>P2App</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag "http:////ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js" %>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
