--- a/p2-app/app/assets/stylesheets/application.css
+++ b/p2-app/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+
+span.blank-space {
+  font-size: 50px;
+}
+
+.letter {
+  font-size: 50px;
+  cursor: grab;
+}
