sidebar divs set up and current_user info filled in

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+.profile-sidebar {
+  background-color: green;
+  width: 400px;
+  overflow-y: hidden;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 1;
+}
