side profile structure set up, user info added for current user, divs set up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,29 +9,25 @@
 <body>
 <h1>Mallard Team Yayyy!!!</h1>
 
-  <div id="container">
-    <div class="profile-sidebar">
-      <div id="toggle-button">X</div>
-      <%= render current_user %>
-      <div class="my-animals">
-        <div id="jungle"></div>
-        <div id="forest"></div>
-        <div id="farm"></div>
-        <div id="savanna"></div>
-      </div>
-    </div>
-  </div>
-
+<div class="profile-sidebar">
   <% if user_signed_in? %>
-    <%= current_user.email %>
-    <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+  <%= render current_user %>
+    <div class="my-animals">
+      <div id="jungle"></div>
+      <div id="forest"></div>
+      <div id="farm"></div>
+      <div id="savanna"></div>
+    </div>
   <% else %>
     <%= link_to 'Sign in', new_user_session_path %>
     <%= link_to 'Sign up', new_user_registration_path %>
   <% end %>
 
+  <%= yield :sidebar %>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+</div>
 
 <%= yield %>
 
