--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+body {
+  margin: 0;
+}
+
 .profile-sidebar {
   background-color: green;
   width: 400px;
@@ -21,6 +25,39 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  margin: auto;
   z-index: 1;
+}
+
+#toggle-button {
+  text-align: right;
+  padding-top: 10px;
+  padding-right: 10px;
+}
+
+.user-info {
+  text-align: center;
+  vertical-align: center;
+  background-color: gray;
+}
+
+#avatar {
+  padding-top: 20px;
+}
+
+#avatar img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border: 2px solid black;
+}
+
+#score {
+  margin-top: 15px;
+  border-top: 5px solid black;
+  border-bottom: 5px solid black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: blue;
 }
