--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,37 +9,57 @@
 
 		<div class='environment' id='jungle'>
 			<h2>Jungle</h2>
-			<article class="levels">
+			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
+			</article>
+			<article class='game_list'>
+				<div class="octagon"><span>Game: 1</span></div>
+				<div class="octagon"><span>Game: 2</span></div>
+				<div class="octagon"><span>Game: 3</span></div>
 			</article>
 		</div>
 
 		<div class='environment' id='savanna'>
 			<h2>Savanna</h2>
-			<article class="levels">
+			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
+			</article>
+			<article class='game_list'>
+				<div class="octagon"><span>Game: 1</span></div>
+				<div class="octagon"><span>Game: 2</span></div>
+				<div class="octagon"><span>Game: 3</span></div>
 			</article>
 		</div>
 
 		<div class='environment' id='forest'>
 			<h2>Forest</h2>
-			<article class="levels">
+			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
+			</article>
+			<article class='game_list'>
+				<div class="octagon"><span>Game: 1</span></div>
+				<div class="octagon"><span>Game: 2</span></div>
+				<div class="octagon"><span>Game: 3</span></div>
 			</article>
 		</div>
 
 		<div class='environment' id='farm'>
 			<h2>Farm</h2>
-			<article class="levels">
+			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
+			</article>
+			<article class='game_list'>
+				<div class="octagon"><span>Game: 1</span></div>
+				<div class="octagon"><span>Game: 2</span></div>
+				<div class="octagon"><span>Game: 3</span></div>
 			</article>
 		</div>
 
