letters append and check solution sorta work

--- a/app/views/games/show.js.erb
+++ b/app/views/games/show.js.erb
@@ -1,4 +1,5 @@
-<%= j(render template: "show.html") %>
-$('.letter').on('hover', css('cursor', 'move'))
+var gameboard = $('<%= j(render gameboard) %>');
+$('body').append(gameboard);
+$('.letter').on('hover', css('cursor', 'move'));
 $('.letter').draggable();
 $('.blank-space').droppable();
