append game list when clicking level

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -14,11 +14,11 @@
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
 			</article>
-			<article class='game_list'>
+			<!-- <article class='game_list'>
 				<div class="octagon"><span>Game: 1</span></div>
 				<div class="octagon"><span>Game: 2</span></div>
 				<div class="octagon"><span>Game: 3</span></div>
-			</article>
+			</article> -->
 		</div>
 
 		<div class='environment' id='savanna'>
@@ -28,11 +28,11 @@
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
 			</article>
-			<article class='game_list'>
+			<!-- <article class='game_list'>
 				<div class="octagon"><span>Game: 1</span></div>
 				<div class="octagon"><span>Game: 2</span></div>
 				<div class="octagon"><span>Game: 3</span></div>
-			</article>
+			</article> -->
 		</div>
 
 		<div class='environment' id='forest'>
@@ -42,11 +42,11 @@
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
 			</article>
-			<article class='game_list'>
+			<!-- <article class='game_list'>
 				<div class="octagon"><span>Game: 1</span></div>
 				<div class="octagon"><span>Game: 2</span></div>
 				<div class="octagon"><span>Game: 3</span></div>
-			</article>
+			</article> -->
 		</div>
 
 		<div class='environment' id='farm'>
@@ -56,11 +56,11 @@
 				<div class='level'>Level: 2</div>
 				<div class='level'>Level: 3</div>
 			</article>
-			<article class='game_list'>
+			<!-- <article class='game_list'>
 				<div class="octagon"><span>Game: 1</span></div>
 				<div class="octagon"><span>Game: 2</span></div>
 				<div class="octagon"><span>Game: 3</span></div>
-			</article>
+			</article> -->
 		</div>
 
 	</section>
