--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,29 +7,56 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1>Mallard Team Yayyy!!!</h1>
+  <div class="profile-sidebar"> <!-- sidebar -->
+    <button id='close-profile' type="button">Close</button>
+    <% if user_signed_in? %>
+    <%= render current_user %>
+      <div class="my-animals">
+        <div class="environment" id="jungle">
+          <h1>Jungle</h1>
+          <div id="collected">
+            <% @animal_list['jungle'].each do |animal| %>
+              <%= animal['name'] %>
+            <% end %>
+          </div>
+        </div>
+        <div class="environment" id="forest">
+          <h1>Forest</h1>
+          <div id="collected">
+            <%= @animal_list['forest'] %>
+          </div>
+        </div>
+        <div class="environment" id="farm">
+          <h1>Farm</h1>
+          <div id="collected">
+            <%= @animal_list['farm'] %>
+          </div>
+        </div>
+        <div class="environment" id="savanna">
+          <h1>Savanna</h1>
+          <div id="collected">
+            <%= @animal_list['savanna'] %>
+          </div>
+        </div>
+      </div>
+    <% else %>
+      <%= link_to 'Sign in', new_user_session_path %>
+      <%= link_to 'Sign up', new_user_registration_path %>
+    <% end %>
 
-<div class="profile-sidebar">
-  <% if user_signed_in? %>
-  <%= render current_user %>
-    <div class="my-animals">
-      <div id="jungle"></div>
-      <div id="forest"></div>
-      <div id="farm"></div>
-      <div id="savanna"></div>
-    </div>
-  <% else %>
-    <%= link_to 'Sign in', new_user_session_path %>
-    <%= link_to 'Sign up', new_user_registration_path %>
-  <% end %>
+    <%= yield :sidebar %>
 
-  <%= yield :sidebar %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  </div>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-</div>
+  <div class="page-content"> <!-- wrapper for the content -->
+    <button id='open-profile' type="button">Open</button>
+      <div class="main"> <!-- actual content -->
+        <%= yield %>
+      </div>
+  </div>
 
-<%= yield %>
 
 </body>
 </html>
