--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,6 +9,7 @@
 
 		<div class='environment' id='jungle'>
 			<h2>Jungle</h2>
+			<h3>You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
@@ -18,6 +19,7 @@
 
 		<div class='environment' id='savanna'>
 			<h2>Savanna</h2>
+			<h3>You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
@@ -27,6 +29,7 @@
 
 		<div class='environment' id='forest'>
 			<h2>Forest</h2>
+			<h3>You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
@@ -36,6 +39,7 @@
 
 		<div class='environment' id='farm'>
 			<h2>Farm</h2>
+			<h3>You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
