--- a/app/views/games/_gameboard.html.erb
+++ b/app/views/games/_gameboard.html.erb
@@ -23,3 +23,8 @@
 <div>
 <button id="check-button">CHECK</button>
 </div>
+<!-- for popup dialog -->
+<div id="completed-dialog" title="Hooray!">
+  <p>You did it!</p>
+  <p>The animal was <%= @animal.name.downcase %></p>
+</div>
