game index page frame works

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,7 +9,8 @@
 
 		<div class='environment' id='jungle'>
 			<h2>Jungle</h2>
-			<h3>You are on level: </h3>
+			<button>All Levels</button>
+			<h3 class="current_level">You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
@@ -19,7 +20,8 @@
 
 		<div class='environment' id='savanna'>
 			<h2>Savanna</h2>
-			<h3>You are on level: </h3>
+			<button>All Levels</button>
+			<h3 class="current_level">You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
@@ -29,7 +31,8 @@
 
 		<div class='environment' id='forest'>
 			<h2>Forest</h2>
-			<h3>You are on level: </h3>
+			<button>All Levels</button>
+			<h3 class="current_level">You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
@@ -39,7 +42,8 @@
 
 		<div class='environment' id='farm'>
 			<h2>Farm</h2>
-			<h3>You are on level: </h3>
+			<button>All Levels</button>
+			<h3 class="current_level">You are on level: </h3>
 			<article class="levels clearfix clear">
 				<div class='level'>Level: 1</div>
 				<div class='level'>Level: 2</div>
