--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -89,22 +89,36 @@ button {
 }
 
 .user-info {
+  padding-top: 40px;
   text-align: center;
   vertical-align: center;
   background-color: gray;
 }
 
-#avatar {
-  padding-top: 40px;
+#info h1 {
+  color: #fff;
 }
 
-#avatar img {
+#avatar {
   width: 100px;
   height: 100px;
   border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border: 5px solid DimGray;
+  background-color: #388a5a;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#avatar h1 {
+  color: #fff;
+  text-align: center;
+  vertical-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #score {
