--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <div class="user-info" id="<%= dom_id(user) %>">
   <div id="avatar">
-    <img src="<%= user.avatar %>"/>
+    <h1><%= user.first_name[0] %></h1>
   </div>
   <div id="info">
     <h1>Hello, <%= user.first_name %>!</h1>
