--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,11 @@
   <div class="page-content"> <!-- wrapper for the content -->
     <button id='open-profile' type="button">Open</button>
       <div class="main"> <!-- actual content -->
-        <%= yield %>
+        <% if user_signed_in? %>
+          <%= yield %>
+        <% else %>
+          <h1> Please log in or sign up</h1>
+        <% end %>
       </div>
   </div>
 </body>
