--- a/app/views/games/_gameboard.html.erb
+++ b/app/views/games/_gameboard.html.erb
@@ -19,7 +19,10 @@
     <% index += 1 %>
   <% end %>
 </div>
-<div class="answer" id="<%= @animal.name.downcase %>" style="display: none;"></div>
+<div class="hidden" style="display: none;">
+<div class="answer" id="<%= @animal.name.downcase %>"></div>
+<div class="animal" id="<%= @animal.id %>"></div>
+</div>
 <div>
 <button id="check-button">CHECK</button>
 </div>
