--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,7 +6,7 @@
 	<h1>Welcome to Mallard Awesomest Word Game Ever!</h1>
 	<h3>But watch out, your brain may explode</h3>
 	<section class="clearfix" id='main'>
-
+		<div class='test-tobedeletedlater'>
 		<div class='environment' id='jungle'>
 			<h2>Jungle</h2>
 			<button>All Levels</button>
