--- a/app/views/games/_gameboard.html.erb
+++ b/app/views/games/_gameboard.html.erb
@@ -22,6 +22,7 @@
 <div class="hidden" style="display: none;">
 <div class="answer" id="<%= @animal.name.downcase %>"></div>
 <div class="animal" id="<%= @animal.id %>"></div>
+<div class="user" id="<%= current_user.id %>"></div>
 </div>
 <div>
 <button id="check-button">CHECK</button>
