commit before merge to development, working on points

--- a/app/views/games/_gameboard.html.erb
+++ b/app/views/games/_gameboard.html.erb
@@ -1,3 +1,5 @@
+<h1 class='hooray'>Congatulations! You Won!</h1>
+<h2 id='points'>Points: </h2>
 <h2>Hints</h2>
 <ol class='hints'>
   <li class='hint first_hint'>First Hint: <br><%= @animal.fact_1 %></li>
@@ -27,12 +29,8 @@
 </div>
 <div class="answer" id="<%= @animal.name.downcase %>" style="display: none;"></div>
 <div>
-  <button id="check-button">CHECK</button>
-  <%= link_to 'REPLAY', game_path %>
+  <button id="check-button">Check answer</button>
+  <button><%= link_to 'Replay', game_path %></button>
+  <button id="skip_hint_button">Skip To The Next Hint</button>
 </div>
 
-<!-- for popup dialog -->
-<div id="completed-dialog" title="Hooray!">
-  <p>You did it!</p>
-  <p>The animal was <%= @animal.name.downcase %></p>
-</div>
