--- a/app/views/games/_gameboard.html.erb
+++ b/app/views/games/_gameboard.html.erb
@@ -1,7 +1,9 @@
-<h1 class='hooray'>Congatulations! You Won!</h1>
-<h2 id='points'>Points: </h2>
+<h1 class='hooray'>Congratulations! You Made It!</h1>
+<h2 id='points'></h2>
+<h2 id='bonus_points'></h2>
+<h2 id='total_points'></h2>
 <h2>Hints</h2>
-<ol class='hints'>
+<ol id='hints'>
   <li class='hint first_hint'>First Hint: <br><%= @animal.fact_1 %></li>
   <li class='hint second_hint'>Second Hint: <br><%= @animal.fact_2 %></li>
   <li class='hint third_hint'>Third Hint: <br><%= @animal.fact_3 %></li>
