--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,45 +9,45 @@
 		<div class='test-tobedeletedlater'>
 		<div class='environment' id='jungle'>
 			<h2>Jungle</h2>
-			<button>All Levels</button>
+			<button id='button-main'>All Levels</button>
 			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
-				<div class='level'>Level: 1</div>
-				<div class='level'>Level: 2</div>
-				<div class='level'>Level: 3</div>
+				<div class='level'><h1>1</h1></div>
+				<div class='level'><h1>2</h1></div>
+				<div class='level'><h1>3</h1></div>
 			</article>
 		</div>
 
 		<div class='environment' id='savanna'>
 			<h2>Savanna</h2>
-			<button>All Levels</button>
+			<button id='button-main'>All Levels</button>
 			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
-				<div class='level'>Level: 1</div>
-				<div class='level'>Level: 2</div>
-				<div class='level'>Level: 3</div>
+				<div class='level'><h1>1</h1></div>
+				<div class='level'><h1>2</h1></div>
+				<div class='level'><h1>3</h1></div>
 			</article>
 		</div>
 
 		<div class='environment' id='forest'>
 			<h2>Forest</h2>
-			<button>All Levels</button>
+			<button id='button-main'>All Levels</button>
 			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
-				<div class='level'>Level: 1</div>
-				<div class='level'>Level: 2</div>
-				<div class='level'>Level: 3</div>
+				<div class='level'><h1>1</h1></div>
+				<div class='level'><h1>2</h1></div>
+				<div class='level'><h1>3</h1></div>
 			</article>
 		</div>
 
 		<div class='environment' id='farm'>
 			<h2>Farm</h2>
-			<button>All Levels</button>
+			<button id='button-main'>All Levels</button>
 			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
-				<div class='level'>Level: 1</div>
-				<div class='level'>Level: 2</div>
-				<div class='level'>Level: 3</div>
+				<div class='level'><h1>1</h1></div>
+				<div class='level'><h1>2</h1></div>
+				<div class='level'><h1>3</h1></div>
 			</article>
 		</div>
 
