--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,8 @@
         <% if user_signed_in? %>
           <%= yield %>
         <% else %>
-          <h1> Please log in or sign up</h1>
+          <h1> Welcome to _________ !</h1>
+          <h2> Please log in or sign up to get started.</h2>
         <% end %>
       </div>
   </div>
