adjusted animals partial in prep for merging with peters branch

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,8 +3,8 @@
 	<title>mallard-game-index</title>
 </head>
 <body>
-	<h1>Welcome to Mallard Awesomest Word Game Ever!</h1>
-	<h4>But watch out, your brain may explode</h4>
+	<h1>Welcome to the Spelling Zoo!</h1>
+	<h4>(A Team Advice Mallard Production)</h4>
 	<section class="clearfix" id='main'>
 		<div class='test-tobedeletedlater'>
 		<div class='environment' id='jungle'>
