--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,15 +16,14 @@
 
 body {
   margin: 0;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: auto;
 }
 
 .page-content {
   position: relative;
   background-color: #fef2dc;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
   z-index: 1;
   margin-left: auto;
   margin-right: auto;
@@ -37,7 +36,7 @@ body {
   background-color: #9cc2a2;
   width: 400px;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   position: fixed;
   top: 0;
   bottom: 0;
