--- a/app/views/users/_animals.html.erb
+++ b/app/views/users/_animals.html.erb
@@ -7,7 +7,7 @@
 <div id='animals-menu'>
   <ul>
   <% my_animals.group_by(&:environment).each do |key, group| %>
-      <li><a href="<%= animals/#{animal.id} %>"><span><%= key %></span></a></li>
+      <li><a href="#"><span><%= key %></span></a></li>
       <ul>
     <% group.each do |animal| %>
       <li><a href="#"><div id='names'><%= animal['name'] %></div></a></li>
