most updated version

--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Back to Games', root_path %>
+
 <div class="animal-info">
   <%= image_tag(@animal.image, class: "animal-image") %>
   <h1 class="animal-name"><%= @animal.name %></h1>
