--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,48 +6,60 @@
 	<h1>Welcome to the Spelling Zoo!</h1>
 	<h4>(A Team Advice Mallard Production)</h4>
 	<section class="clearfix" id='main'>
-		<div class='test-tobedeletedlater'>
+
 		<div class='environment' id='jungle'>
 			<h2>Jungle</h2>
-			<button id='button-main'>All Levels</button>
-			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
 				<div class='level'><h1>1</h1></div>
 				<div class='level'><h1>2</h1></div>
 				<div class='level'><h1>3</h1></div>
+				<div class='level'><h1>4</h1></div>
+				<div class='level'><h1>5</h1></div>
+				<div class='level'><h1>6</h1></div>
+				<div class='level'><h1>7</h1></div>
+				<div class='level'><h1>8</h1></div>
 			</article>
 		</div>
 
 		<div class='environment' id='savanna'>
 			<h2>Savanna</h2>
-			<button id='button-main'>All Levels</button>
-			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
 				<div class='level'><h1>1</h1></div>
 				<div class='level'><h1>2</h1></div>
 				<div class='level'><h1>3</h1></div>
+				<div class='level'><h1>4</h1></div>
+				<div class='level'><h1>5</h1></div>
+				<div class='level'><h1>6</h1></div>
+				<div class='level'><h1>7</h1></div>
+				<div class='level'><h1>8</h1></div>
 			</article>
 		</div>
 
 		<div class='environment' id='forest'>
 			<h2>Forest</h2>
-			<button id='button-main'>All Levels</button>
-			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
 				<div class='level'><h1>1</h1></div>
 				<div class='level'><h1>2</h1></div>
 				<div class='level'><h1>3</h1></div>
+				<div class='level'><h1>4</h1></div>
+				<div class='level'><h1>5</h1></div>
+				<div class='level'><h1>6</h1></div>
+				<div class='level'><h1>7</h1></div>
+				<div class='level'><h1>8</h1></div>
 			</article>
 		</div>
 
 		<div class='environment' id='farm'>
 			<h2>Farm</h2>
-			<button id='button-main'>All Levels</button>
-			<h4 class="current_level">You are on level: </h4>
 			<article class="levels clearfix clear">
 				<div class='level'><h1>1</h1></div>
 				<div class='level'><h1>2</h1></div>
 				<div class='level'><h1>3</h1></div>
+				<div class='level'><h1>4</h1></div>
+				<div class='level'><h1>5</h1></div>
+				<div class='level'><h1>6</h1></div>
+				<div class='level'><h1>7</h1></div>
+				<div class='level'><h1>8</h1></div>
 			</article>
 		</div>
 
