--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -239,16 +239,6 @@ button {
   vertical-align: center;
 }
 
-.environment {
-  margin: 20px auto;
-  height: auto;
-  width: 46%;
-  display: inline-block;
-  text-decoration: bolder;
-  clear: both;
-  background-color: #d6cfb2;
-}
-
 span.blank-space {
   font-size: 120px;
 }
@@ -262,6 +252,15 @@ span.blank-space {
 #main {
 	margin: 0 auto;
 	position: relative;
+}
+
+.environment {
+  margin: 20px auto;
+  height: auto;
+  width: 650px;
+  display: inline-block;
+  clear: both;
+  background-color: #d6cfb2;
 }
 
 #jungle {
@@ -278,13 +277,13 @@ span.blank-space {
 
 #forest {
 	position: absolute;
-	top: 346px;
+	top: 450px;
 	left: 0%;
 }
 
 #farm {
 	position: absolute;
-	top: 346px;
+	top: 450px;
 	left: 50%;
 }
 
