--- a/app/views/users/_animals.html.erb
+++ b/app/views/users/_animals.html.erb
@@ -10,7 +10,7 @@
       <li><a href="#"><span><%= key %></span></a></li>
       <ul>
     <% group.each do |animal| %>
-      <li><a href="#"><div id='names'><%= animal['name'] %></div></a></li>
+      <li><a href='<%= "/animals/#{animal.id}" %>'><div id='names'><%= animal['name'] %></div></a></li>
     <% end %>
       </ul>
   <% end %>
