--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -7,59 +7,48 @@
 	<h4>(A Team Advice Mallard Production)</h4>
 	<section class="clearfix" id='main'>
 
+
+		<div class='environment' id='farm'>
+			<h2>Farm</h2>
+			<article class="levels clearfix clear">
+				<% counter = 1 %>
+				<% Animal.where(environment: "Farm").each do |animal| %>
+				<a href='<%= "/games/#{animal.id}" %>'><div class='level'><h1><%= counter %></h1></div>
+					<% counter += 1 %>
+					<% end %>
+			</article>
+		</div>
+
 		<div class='environment' id='jungle'>
 			<h2>Jungle</h2>
 			<article class="levels clearfix clear">
-				<div class='level'><h1>1</h1></div>
-				<div class='level'><h1>2</h1></div>
-				<div class='level'><h1>3</h1></div>
-				<div class='level'><h1>4</h1></div>
-				<div class='level'><h1>5</h1></div>
-				<div class='level'><h1>6</h1></div>
-				<div class='level'><h1>7</h1></div>
-				<div class='level'><h1>8</h1></div>
+				<% counter = 1 %>
+				<% Animal.where(environment: "Jungle").each do |animal| %>
+				<a href='<%= "/games/#{animal.id}" %>'><div class='level'><h1><%= counter %></h1></div>
+					<% counter += 1 %>
+					<% end %>
 			</article>
 		</div>
 
 		<div class='environment' id='savanna'>
 			<h2>Savanna</h2>
 			<article class="levels clearfix clear">
-				<div class='level'><h1>1</h1></div>
-				<div class='level'><h1>2</h1></div>
-				<div class='level'><h1>3</h1></div>
-				<div class='level'><h1>4</h1></div>
-				<div class='level'><h1>5</h1></div>
-				<div class='level'><h1>6</h1></div>
-				<div class='level'><h1>7</h1></div>
-				<div class='level'><h1>8</h1></div>
+				<% counter = 1 %>
+				<% Animal.where(environment: "Savanna").each do |animal| %>
+				<a href='<%= "/games/#{animal.id}" %>'><div class='level'><h1><%= counter %></h1></div>
+					<% counter += 1 %>
+					<% end %>
 			</article>
 		</div>
 
 		<div class='environment' id='forest'>
 			<h2>Forest</h2>
 			<article class="levels clearfix clear">
-				<div class='level'><h1>1</h1></div>
-				<div class='level'><h1>2</h1></div>
-				<div class='level'><h1>3</h1></div>
-				<div class='level'><h1>4</h1></div>
-				<div class='level'><h1>5</h1></div>
-				<div class='level'><h1>6</h1></div>
-				<div class='level'><h1>7</h1></div>
-				<div class='level'><h1>8</h1></div>
-			</article>
-		</div>
-
-		<div class='environment' id='farm'>
-			<h2>Farm</h2>
-			<article class="levels clearfix clear">
-				<div class='level'><h1>1</h1></div>
-				<div class='level'><h1>2</h1></div>
-				<div class='level'><h1>3</h1></div>
-				<div class='level'><h1>4</h1></div>
-				<div class='level'><h1>5</h1></div>
-				<div class='level'><h1>6</h1></div>
-				<div class='level'><h1>7</h1></div>
-				<div class='level'><h1>8</h1></div>
+				<% counter = 1 %>
+				<% Animal.where(environment: "Forest").each do |animal| %>
+				<a href='<%= "/games/#{animal.id}" %>'><div class='level'><h1><%= counter %></h1></div>
+					<% counter += 1 %>
+					<% end %>
 			</article>
 		</div>
 
