--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>P2App</title>
+  <title>Spelling Zoo</title>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -32,7 +32,7 @@
         <% if user_signed_in? %>
           <%= yield %>
         <% else %>
-          <h1> Welcome to _________ !</h1>
+          <h1> Welcome to the Spelling Zoo!</h1>
           <h2> Please log in or sign up to get started.</h2>
         <% end %>
       </div>
